[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/UIElements/Image/Background Stats Menu Image.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/CaviarDreams/CaviarDreams_Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/CaviarDreams/CaviarDreams.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/MainScenes/Menu/StatsScreen.gd" type="Script" id=4]
[ext_resource path="res://Assets/UIElements/Image/Normal Button.png" type="Texture" id=5]
[ext_resource path="res://Assets/UIElements/Image/Cancel Normal.png" type="Texture" id=6]
[ext_resource path="res://Assets/UIElements/Image/Pressed Button.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/Prolamina/CT ProLamina.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/UIElements/Image/Cancel Pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/UIElements/Image/Cancel Hover.png" type="Texture" id=10]
[ext_resource path="res://Assets/UIElements/Image/Back Arrow Normal.png" type="Texture" id=11]
[ext_resource path="res://Assets/UIElements/Image/Back Arrow Pressed .png" type="Texture" id=12]
[ext_resource path="res://Assets/UIElements/Image/Back Arrow Hover.png" type="Texture" id=13]
[ext_resource path="res://Scenes/MainScenes/Menu/Translator.gd" type="Script" id=14]
[ext_resource path="res://Assets/UIElements/Image/EN Flag.png" type="Texture" id=15]
[ext_resource path="res://Assets/UIElements/Image/Translate Icon.png" type="Texture" id=16]
[ext_resource path="res://Assets/UIElements/Image/Hover Translate Icon.png" type="Texture" id=17]
[ext_resource path="res://Assets/UIElements/Image/ES Flag.png" type="Texture" id=18]
[ext_resource path="res://Assets/UIElements/Image/Background Login Image.png" type="Texture" id=19]
[ext_resource path="res://Assets/UIElements/Image/Hover Button.png" type="Texture" id=20]
[ext_resource path="res://Scenes/MainScenes/Menu/LevelIndicator.tscn" type="PackedScene" id=21]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0.321569, 0.290196, 0.290196, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 1
outline_color = Color( 0.619608, 0.654902, 0.188235, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 35
outline_size = 1
outline_color = Color( 0.67451, 0.65098, 0.65098, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 4
outline_color = Color( 0.67451, 0.65098, 0.65098, 1 )
font_data = ExtResource( 2 )

[node name="StatsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Bar" type="NinePatchRect" parent="Background"]
anchor_right = 1.0
margin_bottom = 64.0
texture = ExtResource( 19 )
region_rect = Rect2( 53, 97, 161, 96 )
patch_margin_top = 4
patch_margin_right = 103
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="Background"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -388.0
margin_top = -232.5
margin_right = 388.0
margin_bottom = 232.5
rect_min_size = Vector2( 330, 445 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsTitle" type="Label" parent="Background/Stats"]
margin_right = 776.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "SS2PLAYERSTATISTICS"
align = 1

[node name="MarginTitle" type="MarginContainer" parent="Background/Stats"]
margin_top = 43.0
margin_right = 776.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 20 )

[node name="BasicConceptsTitle" type="Label" parent="Background/Stats"]
margin_top = 67.0
margin_right = 776.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
text = "SS2BASICCONCEPTS"
align = 1

[node name="MarginBasicConceptsTitle" type="MarginContainer" parent="Background/Stats"]
margin_top = 100.0
margin_right = 776.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxBasicConcepts" type="HBoxContainer" parent="Background/Stats"]
margin_top = 114.0
margin_right = 776.0
margin_bottom = 141.0
alignment = 1

[node name="MarginContainer1" type="MarginContainer" parent="Background/Stats/HBoxBasicConcepts"]
margin_left = 271.0
margin_right = 301.0
margin_bottom = 27.0
rect_min_size = Vector2( 30, 0 )

[node name="Progress" type="Label" parent="Background/Stats/HBoxBasicConcepts"]
margin_left = 305.0
margin_right = 450.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "SS2PROGRESS"

[node name="MarginContainer2" type="MarginContainer" parent="Background/Stats/HBoxBasicConcepts"]
margin_left = 454.0
margin_right = 474.0
margin_bottom = 27.0
rect_min_size = Vector2( 20, 0 )

[node name="StartValue" type="Label" parent="Background/Stats/HBoxBasicConcepts"]
margin_left = 478.0
margin_right = 504.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "0%"

[node name="MarginMiddleConcepts1" type="MarginContainer" parent="Background/Stats"]
margin_top = 145.0
margin_right = 776.0
margin_bottom = 165.0
rect_min_size = Vector2( 0, 20 )

[node name="IntermediateConceptsTitle" type="Label" parent="Background/Stats"]
margin_top = 169.0
margin_right = 776.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 2 )
text = "SS2INTERMEDIATECONCEPT"
align = 1

[node name="MarginIntermediateConceptsTitle" type="MarginContainer" parent="Background/Stats"]
margin_top = 202.0
margin_right = 776.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxIntermediateConcepts" type="HBoxContainer" parent="Background/Stats"]
margin_top = 216.0
margin_right = 776.0
margin_bottom = 243.0
alignment = 1

[node name="MarginContainer1" type="MarginContainer" parent="Background/Stats/HBoxIntermediateConcepts"]
margin_left = 271.0
margin_right = 301.0
margin_bottom = 27.0
rect_min_size = Vector2( 30, 0 )

[node name="Progress" type="Label" parent="Background/Stats/HBoxIntermediateConcepts"]
margin_left = 305.0
margin_right = 450.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "SS2PROGRESS"

[node name="MarginContainer2" type="MarginContainer" parent="Background/Stats/HBoxIntermediateConcepts"]
margin_left = 454.0
margin_right = 474.0
margin_bottom = 27.0
rect_min_size = Vector2( 20, 0 )

[node name="StartValue" type="Label" parent="Background/Stats/HBoxIntermediateConcepts"]
margin_left = 478.0
margin_right = 504.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "0%"

[node name="MarginMiddleConcepts2" type="MarginContainer" parent="Background/Stats"]
margin_top = 247.0
margin_right = 776.0
margin_bottom = 267.0
rect_min_size = Vector2( 0, 20 )

[node name="AdvancedConceptsTitle" type="Label" parent="Background/Stats"]
margin_top = 271.0
margin_right = 776.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 2 )
text = "SS2ADVANCEDCONCEPT"
align = 1

[node name="MarginAdvancedConceptsTitle" type="MarginContainer" parent="Background/Stats"]
margin_top = 304.0
margin_right = 776.0
margin_bottom = 314.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxAdvancedConcepts" type="HBoxContainer" parent="Background/Stats"]
margin_top = 318.0
margin_right = 776.0
margin_bottom = 345.0
alignment = 1

[node name="MarginContainer1" type="MarginContainer" parent="Background/Stats/HBoxAdvancedConcepts"]
margin_left = 271.0
margin_right = 301.0
margin_bottom = 27.0
rect_min_size = Vector2( 30, 0 )

[node name="Progress" type="Label" parent="Background/Stats/HBoxAdvancedConcepts"]
margin_left = 305.0
margin_right = 450.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "SS2PROGRESS"

[node name="MarginContainer2" type="MarginContainer" parent="Background/Stats/HBoxAdvancedConcepts"]
margin_left = 454.0
margin_right = 474.0
margin_bottom = 27.0
rect_min_size = Vector2( 20, 0 )

[node name="StartValue" type="Label" parent="Background/Stats/HBoxAdvancedConcepts"]
margin_left = 478.0
margin_right = 504.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "0%"

[node name="Levels" type="Control" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsButton" type="TextureButton" parent="Background/Levels"]
anchor_left = 0.729
anchor_top = 0.054
anchor_right = 0.729
anchor_bottom = 0.054
margin_left = -149.905
margin_top = -26.2941
margin_right = 150.095
margin_bottom = 25.7059
rect_min_size = Vector2( 300, 45 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 20 )
texture_disabled = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background/Levels/StatsButton"]
anchor_left = 0.039
anchor_right = 0.95
anchor_bottom = 1.0
margin_left = -0.16
margin_top = 5.0
margin_right = -3.05176e-05
margin_bottom = -3.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STATS1"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Levels"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background/Levels/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="BasicConceptsTitle" type="Label" parent="Background/Levels/VBoxContainer"]
margin_top = 14.0
margin_right = 1024.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "SS2BASICCONCEPTS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/Levels/VBoxContainer"]
margin_top = 47.0
margin_right = 1024.0
margin_bottom = 175.0
alignment = 1

[node name="BasicLevelIndicator1" parent="Background/Levels/VBoxContainer/HBoxContainer" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 292.0
margin_right = 420.0
margin_bottom = 128.0
number = 1
route = "res://Scenes/MainScenes/World/BasicRestaurant/BasicRestaurantB1.tscn"

[node name="MarginContainer" type="MarginContainer" parent="Background/Levels/VBoxContainer/HBoxContainer"]
margin_left = 424.0
margin_right = 444.0
margin_bottom = 128.0
rect_min_size = Vector2( 20, 0 )

[node name="BasicLevelIndicator2" parent="Background/Levels/VBoxContainer/HBoxContainer" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 448.0
margin_right = 576.0
margin_bottom = 128.0
number = 2
route = "res://Scenes/MainScenes/World/BasicRestaurant/BasicRestaurantB2.tscn"

[node name="MarginContainer2" type="MarginContainer" parent="Background/Levels/VBoxContainer/HBoxContainer"]
margin_left = 580.0
margin_right = 600.0
margin_bottom = 128.0
rect_min_size = Vector2( 20, 0 )

[node name="BasicLevelIndicator3" parent="Background/Levels/VBoxContainer/HBoxContainer" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 604.0
margin_right = 732.0
margin_bottom = 128.0
number = 3
route = "res://Scenes/MainScenes/World/BasicRestaurant/BasicRestaurantB3.tscn"

[node name="MarginContainer2" type="MarginContainer" parent="Background/Levels/VBoxContainer"]
margin_top = 179.0
margin_right = 1024.0
margin_bottom = 189.0
rect_min_size = Vector2( 0, 10 )

[node name="IntermediateConceptsTitle" type="Label" parent="Background/Levels/VBoxContainer"]
margin_top = 193.0
margin_right = 1024.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 2 )
text = "SS2INTERMEDIATECONCEPT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/Levels/VBoxContainer"]
margin_top = 226.0
margin_right = 1024.0
margin_bottom = 354.0
alignment = 1

[node name="IntermediateLevelIndicator1" parent="Background/Levels/VBoxContainer/HBoxContainer2" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 448.0
margin_right = 576.0
margin_bottom = 128.0
number = 1
buttonType = 1
route = "\"LevelLoadI1\""

[node name="MarginContainer3" type="MarginContainer" parent="Background/Levels/VBoxContainer"]
margin_top = 358.0
margin_right = 1024.0
margin_bottom = 368.0
rect_min_size = Vector2( 0, 10 )

[node name="AdvancedConceptsTitle" type="Label" parent="Background/Levels/VBoxContainer"]
margin_top = 372.0
margin_right = 1024.0
margin_bottom = 401.0
custom_fonts/font = SubResource( 2 )
text = "SS2ADVANCEDCONCEPT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Background/Levels/VBoxContainer"]
margin_top = 405.0
margin_right = 1024.0
margin_bottom = 533.0
alignment = 1

[node name="AdvancedLevelIndicator1" parent="Background/Levels/VBoxContainer/HBoxContainer3" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 448.0
margin_right = 576.0
margin_bottom = 128.0
number = 1
buttonType = 2
route = "\"LevelLoadA1\""

[node name="CancelButton" type="TextureButton" parent="Background"]
anchor_left = 0.964
anchor_top = 0.054
anchor_right = 0.964
anchor_bottom = 0.054
margin_left = -20.5849
margin_top = -20.3439
margin_right = 491.415
margin_bottom = 491.657
rect_scale = Vector2( 0.08, 0.08 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Background"]
visible = false
anchor_left = 0.854
anchor_top = 0.053
anchor_right = 0.854
anchor_bottom = 0.053
margin_left = -25.8165
margin_top = -25.7258
margin_right = 486.184
margin_bottom = 486.275
rect_scale = Vector2( 0.1, 0.1 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TranslatorButton" type="TextureButton" parent="Background"]
anchor_left = 0.91
anchor_top = 0.047
anchor_right = 0.91
anchor_bottom = 0.047
margin_left = -20.7839
margin_top = -15.4806
margin_right = 19.2161
margin_bottom = 24.5194
rect_min_size = Vector2( 40, 40 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )
texture_disabled = ExtResource( 17 )
expand = true
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TranslatortemList" type="ItemList" parent="Background/TranslatorButton"]
visible = false
anchor_left = -1.175
anchor_top = 1.14
anchor_right = -1.175
anchor_bottom = 1.14
margin_left = -89.9896
margin_top = -47.4877
margin_right = 90.0104
margin_bottom = 47.5123
rect_min_size = Vector2( 180, 95 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
items = [ "Español", ExtResource( 18 ), false, "English", ExtResource( 15 ), false ]
icon_scale = 0.6
fixed_icon_size = Vector2( 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background"]
anchor_left = 0.06
anchor_top = 0.055
anchor_right = 0.06
anchor_bottom = 0.055
margin_left = -53.3114
margin_top = -19.3368
margin_right = 53.6886
margin_bottom = 19.6632
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "L1TITLE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/Levels/StatsButton" to="." method="_on_StatsButton_pressed"]
[connection signal="pressed" from="Background/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="Background/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Background/TranslatorButton" to="Background/TranslatorButton" method="_on_TextureButton_pressed"]
[connection signal="item_selected" from="Background/TranslatorButton/TranslatortemList" to="Background/TranslatorButton" method="_on_ItemList_item_selected"]
